--- a/classes/JS/class 12/Index.html
+++ b/classes/JS/class 12/Index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./object.js"></script>
+    <script src="./Class.js"></script>
   </head>
   <body>
-    <h1>Objects</h1>
+    <h1>Class and Objects</h1>
   </body>
 </html>
