--- a/classes/JS/MachineCoding/class 22/countdown Timer/index.html
+++ b/classes/JS/MachineCoding/class 22/countdown Timer/index.html
@@ -9,7 +9,7 @@
         1. length of each input should be max 2
         2. 00-99 (61 seconds -> 1 min + , 1 second) 
         (65 mins -> 1 hr +, 5 mins)
-        (28hrs -> handle edge case (throw error))
+        (28hrs ->  max 24 hrs - handle edge case (throw error))
 
     Good to have features:
     1. once timer start add music
